[project]
name = "mongodb-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.1.2",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.0",
    "openai>=2.9.0",
    "pymongo>=4.15.5",
    "pypdf>=6.4.1",
]
